--- a/src/RestClient/RestClient.csproj
+++ b/src/RestClient/RestClient.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Executor\Executor.csproj" />
     <ProjectReference Include="..\..\Models\Contracts.csproj" />
   </ItemGroup>
 
