--- a/src/RestClient/RestClient.csproj
+++ b/src/RestClient/RestClient.csproj
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Executor\Executor.csproj" />
-    <ProjectReference Include="..\..\Models\Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\Executor\Executors.csproj" />
   </ItemGroup>
 
 </Project>
